fixed Jeremiah's mess :)

--- a/EagleSocial/StatusUpdateTableViewCell.xib
+++ b/EagleSocial/StatusUpdateTableViewCell.xib
@@ -37,7 +37,7 @@
                         <rect key="frame" x="16" y="79" width="298" height="30"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes" returnKeyType="done" smartInsertDeleteType="yes"/>
                     </textField>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1kT-uY-fl4">
                         <rect key="frame" x="260" y="116" width="54" height="30"/>
